# bromomethane

./: .dockerignore  .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  eslint.config.js  flake.nix  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: build.yml  release.yml
.hack/linux/: Dockerfile  bundle.sh
.hack/linux/pkgbuild/: PKGBUILD.tmpl  arch-install.sh.tmpl
bmm-lib/: Cargo.toml
bmm-lib/src/: cache.rs  database.rs  errors.rs  finder.rs  installer.rs  lib.rs  local_mod_detection.rs  logging.rs  lovely.rs  mod_collections.rs  smods_installer.rs
scripts/linux/: Dockerfile  bundle.sh  install-deps.sh
scripts/linux/pkgbuild/: arch-install.sh  arch-install.sh.tmpl
src/: app.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bmm-lib/: Cargo.toml
src-tauri/bmm-lib/src/: balamod.rs  cache.rs  database.rs  discord_rpc.rs  finder.rs  installer.rs  lib.rs  local_mod_detection.rs  logging.rs  lovely.rs  smods_installer.rs
src-tauri/capabilities/: default.json
src-tauri/src/: github_repo.rs  lib.rs  main.rs
src/components/: BalatroPicker.svelte  DragDropOverlay.svelte  LaunchAlertBox.svelte  LaunchButton.svelte  MessageStack.svelte  PathSelector.svelte  RequiresPopup.svelte  SecurityPopup.svelte  UninstallDialog.svelte  UpdateNotificationPopup.svelte  WarningPopup.svelte
src/components/viewblock/: About.svelte  LocalModCard.svelte  ModCard.svelte  ModGrid.svelte  ModView.svelte  Mods.svelte  SearchView.svelte  Settings.svelte
src/lib/: stores.ts  tauri-wrappers.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/main/: +page.svelte
src/stores/: modCache.ts  modStore.ts
src/utils/: helpers.ts  image-cache.ts  performReindexMods.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: github_repo.rs  lib.rs  main.rs
