[workspace]
resolver = "3"
members = ["tauri", "bmm-lib"]

[workspace.dependencies]

anyhow = "1.0.98"
assert_fs = "1.1.3"
balatro_mod_index = "0.4.3"
base64 = "0.22.1"
bincode = "2.0.1"
bmm-lib = { path = "./bmm-lib" }
bytes = "1.10.1"
chrono = "0.4.41"
dirs = "6.0.0"
env_logger = "0.11.8"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
flate2 = "1.1.1"
home = "0.5.11"
infer = "0.19.0"
lazy_static = "1.5.0"
libc = "0.2.172"
libflate = "2.1.0"
libproc = "0.14.10"
log = "0.4.27"
lovely_mod_manager = "0.5.1"
mockito = "1.7.0"
open = "5.3.2"
predicates = "3.1.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.18"
rusqlite = "0.36.0"
scopeguard = "1.2.0"
serde = "1"
serde_json = "1"
serde_repr = "0.1.20"
sysinfo = "0.35.1"
tar = "0.4.44"
tauri = "2.5.1"
tauri-build = "2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2"
tauri-plugin-prevent-default = "2.1.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-utils = "2.4.0"
tempfile = "3.20.0"
test-case = "3.3.1"
tokio = "1.45.1"
tokio-test = "0.4.4"
walkdir = "2.5.0"
which = "7.0.2"
winreg = "0.55.0"
zip = "4.0.0"
