[package]
name = "bmm-lib"
version = "0.2.7"
edition = "2024"

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["serde"] }
bytes.workspace = true
chrono.workspace = true
dirs.workspace = true
env_logger.workspace = true
flate2 = { workspace = true, features = ["zlib"] }
infer.workspace = true
lazy_static.workspace = true
libc.workspace = true
libflate.workspace = true
log.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
serde_repr.workspace = true
sysinfo.workspace = true
tar.workspace = true
tauri.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
zip.workspace = true


[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[target.'cfg(unix)'.dependencies]
libproc.workspace = true
home.workspace = true
# libloading = "0.8.6"
