[package]
name = "bromomethane"
version = "0.3.0"
description = "A mod manager for Balatro - easily install and manage mods for the popular roguelike deckbuilding game"
authors = ["kasimeka <kasimeka@tuta.io>"]
edition = "2024"
keywords = ["gaming", "mods", "balatro", "manager", "tauri"]
categories = ["games", "development-tools", "gui"]
readme = "README.md"
repository = "https://github.com/kasimeka/bromomethane"
publish = false

[[bin]]
name = "bromomethane"
path = "src/main.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.2.2"
bmm-lib = { path = "../bmm-lib" }
dirs = "6.0.0"
tauri-plugin-fs = "2"
log = "0.4.27"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-utils = "2.4.0"
base64 = "0.22.1"
reqwest = "0.12.18"
# chrono = "0.4.40"
zip = "4.0.0"
open = "5.3.2"
tauri-plugin-prevent-default = "2.1.1"
tar = "0.4.44"
flate2 = "1.1.1"
walkdir = "2.5.0"
rayon = "1.10.0"
balatro_mod_index = { version = "0.4.3", features = ["reqwest"] }
lovely_mod_manager = "0.5.1"
bytes = "1.10.1"

[dev-dependencies]
tempfile = "3.20.0"
scopeguard = "1.2.0"
mockito = "1.7.0"
tokio-test = "0.4.4"
test-case = "3.3.1"
assert_fs = "1.1.3"
predicates = "3.1.3"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "linux")'.dependencies]
which = "7.0.2"
