[package]
name = "bromomethane"
version = "0.4.0"
description = "A mod manager for Balatro - easily install and manage mods for the popular roguelike deckbuilding game"
authors = ["kasimeka <kasimeka@tuta.io>"]
edition = "2024"
keywords = ["gaming", "mods", "balatro", "manager", "tauri"]
categories = ["games", "development-tools", "gui"]
readme = "README.md"
repository = "https://github.com/kasimeka/bromomethane"
publish = false

[[bin]]
name = "bromomethane"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-shell.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-dialog.workspace = true
bmm-lib.workspace = true
dirs.workspace = true
tauri-plugin-fs.workspace = true
log.workspace = true
fix-path-env.workspace = true
tauri-utils.workspace = true
base64.workspace = true
reqwest.workspace = true
# chrono.workspace = true
zip.workspace = true
open.workspace = true
tauri-plugin-prevent-default.workspace = true
tar.workspace = true
flate2.workspace = true
walkdir.workspace = true
rayon.workspace = true
balatro_mod_index = { workspace = true, features = ["reqwest"] }
lovely_mod_manager.workspace = true
bytes.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
scopeguard.workspace = true
mockito.workspace = true
tokio-test.workspace = true
test-case.workspace = true
assert_fs.workspace = true
predicates.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance.workspace = true
tauri-plugin-window-state.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
which.workspace = true
